--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^9.1.3",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -24,5 +25,10 @@
     "nodemon": "^3.0.1",
     "serverless-http": "^3.2.0",
     "validator": "^13.11.0"
+  },
+  "devDependencies": {
+    "css-loader": "^6.8.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
