--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "./node_modules/.bin/netlify-lambda build src",
+    "start": "node src/index.js",
+    "build": "npm run build",
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,6 @@
     "mongodb": "^3.5.0",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
-    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "serverless-http": "^3.2.0",
